# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPLv2

  21 Jan 2006; Roy Marples <uberlord@gentoo.org>:

    Ensure that CRITICAL_SERVICES are in the boot runlevel, #117912.

* baselayout-1.12.0_pre15 (20 Jan 2006)

  20 Jan 2006; Roy Marples <uberlord@gentoo.org>:

    Fix quoting in iwconfig, #119629.
    Fix process pid selection in rc-daemon.sh, #119631.
    Both of the above thanks to Dominik Buerkle.

    init scripts no longer run during the sysinit runlevel, #118419.
    Thanks to Greg KH and the Linux Hotplug mailing list for advice.

  19 Jan 2006; Roy Marples <uberlord@gentoo.org>:

    Give a better error message when no valid DHCP client is installed.

  18 Jan 2006; Roy Marples <uberlord@gentoo.org>:

    Services should not get stuck in rc anymore, #119233, #119242.

    We only hotplug net.* scripts on interfaces that are marked as ethernet.

  16 Jan 2006; Roy Marples <uberlord@gentoo.org>:

    Renamed restart in $svcdir to scheduled as it makes much more sense.

    Interfaces names with a dot in them now work.

  14 Jan 2006; Roy Marples <uberlord@gentoo.org>:

    Changed runscript.sh to store it's services to restart like rc.

* baselayout-1.12.0_pre14 (13 Jan 2006)

  13 Jan 2006; Roy Marples <uberlord@gentoo.org>:

    Added warning to modules.autoload.d files stating that it's a bad idea
    to put modules there that trigger hotplug events which in turn start
    services, #118419.

    Services that need a service which is inactive at boot are now scheduled
    to start when the inactive service starts, #118801.

  12 Jan 2006; Roy Marples <uberlord@gentoo.org>:

    Interactive start is now controllable by RC_INTERACTIVE="yes" and will
    probe to see if we can go interactive.

  11 Jan 2006; Roy Marples <uberlord@gentoo.org>:

    runscript.sh now traps interrupt signals and rolls back its status to what
    it was when before it started.
